Fixes spacing and adds status blocks
Breaker engaged, Breaker sleeping, instructions for manual align, and
fixing spacing of other boxes

--- a/webserver/client/sass/style.scss
+++ b/webserver/client/sass/style.scss
@@ -15,6 +15,8 @@ body {
 }
 #Menu{
   background-color: #FF0000;
+  position: relative;
+  top: 25px;
 }
 
 .basic-info-container{
@@ -32,13 +34,15 @@ body {
   img{
     height: 25px;
     width: auto;
+    position: relative;
+    top: -10px;
   }
 }
 
 .position-container{
   position: absolute;
   top: 100px;
-  left: 50px;
+  left: 45px;
   width: 200px;
   height: 350px;
   margin: 20px auto;
@@ -53,8 +57,8 @@ body {
 .output-container{
   position: absolute;
   top: 100px;
-  right: 50px;
-  width: 400px;
+  right: 30px;
+  width: 200px;
   height: 400px;
   margin: 20px auto;
   padding: 20px;
@@ -97,6 +101,37 @@ body {
   height: 0;
 }
 
+  #breaker-status{
+  position: absolute;
+  top: 615px;
+  left: 20px;
+  text-align: center;
+  width:100px;
+  height:100px;
+  margin: 1em;
+  border-radius:75px;
+  font-size:10px;
+  color:#000;
+  line-height:100px;
+  background:#00ff00;
+  }
+
+  #robot-status{
+  position: absolute;
+  top: 615px;
+  left:130px;
+  text-align: center;
+  width:100px;
+  height:100px;
+  margin: 1em;
+  border-radius:75px;
+  font-size:10px;
+  color:#000;
+  line-height:100px;
+  background:#00ff00;
+  float:left;
+  }
+
 .wrapper {
   position: absolute;
   top: 75px;
@@ -106,7 +141,7 @@ body {
   .video-container {
     margin: 0 auto;
     width: 50%;
-    min-width: 640px;
+    min-width: 600px;
     position: relative;
     .watermark {
       position: absolute;
@@ -132,11 +167,21 @@ body {
     }
     .manual {
       display: block;
+        #alignment-instructions{
+        width: 450px;
+        height: 30px;
+        margin: auto;
+        border: dotted #ff0000 5px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box; 
+        }
     }
     .auto {
       display: none;
 
         .alignment-status{
+          text-align: center;
           width:100px;
           height:100px;
           margin: 1em;
